Add wxWidgets 2.9.2 include path

--- a/uMod_GUI/makefile.vc
+++ b/uMod_GUI/makefile.vc
@@ -28,7 +28,7 @@ MINIMAL_CXXFLAGS = /M$(__RUNTIME_LIBS_10)$(__DEBUGRUNTIME_4) /DWIN32 \
 	$(__OPTIMIZEFLAG_6) $(__NO_VC_CRTDBG_p) /D__WXMSW__ $(__WXUNIV_DEFINE_p) \
 	$(__DEBUG_DEFINE_p) $(__NDEBUG_DEFINE_p) $(__EXCEPTIONS_DEFINE_p) \
 	$(__RTTI_DEFINE_p) $(__THREAD_DEFINE_p) $(__UNICODE_DEFINE_p) \
-	$(__MSLU_DEFINE_p) /I$(SETUPHDIR) /I$(WX_DIR)\include /I$(WX_DIR)\include\wx-2.9 \
+	$(__MSLU_DEFINE_p) /I$(SETUPHDIR) /I$(WX_DIR)\include /I$(WX_DIR)\include\wx-2.9 /I$(WX_DIR)\include\wx-2.9.2 \
 	$(____CAIRO_INCLUDEDIR_FILENAMES_p) /W4 /I. $(__DLLFLAG_p) /D_WINDOWS \
 	 /DNOPCH $(__RTTIFLAG_11) $(__EXCEPTIONSFLAG_12) \
 	$(CPPFLAGS) $(CXXFLAGS)
