--- a/uMod_GUI/makefile.vc
+++ b/uMod_GUI/makefile.vc
@@ -44,7 +44,7 @@ MINIMAL_OBJECTS =  \
   $(OBJS)\uMod_Sender.obj \
   $(OBJS)\uMod_Settings.obj \
   $(OBJS)\uMod_AddTexture.obj \
-  $(OBJS)\uMod_Language.obj
+  $(OBJS)\uMod_Language.obj \
   $(OBJS)\uMod_XLocaleShim.obj
 MINIMAL_RESOURCES =  \
 	$(OBJS)\uMod_GUI.res
