--- a/uMod_DX9/makefile.gcc
+++ b/uMod_DX9/makefile.gcc
@@ -1,18 +1,3 @@
-ifdef NI
-
-ifdef LOG_MESSAGE
-precompiler_flag = /D "LOG_MESSAGE" /D "NO_INJECTION"
-else
-precompiler_flag = /D "NO_INJECTION"
-endif
-
-def_file = /DEF:"uMod_DX9_dll_NO_INJECTION.def"
-obj_suff = NI.obj
-dll = d3d9.dll
-
-else
-
-ifdef DI
 ifdef LOG_MESSAGE
 precompiler_flag = /D "LOG_MESSAGE" /D "DIRECT_INJECTION"
 else
@@ -22,20 +7,6 @@ endif
 def_file = /DEF:"uMod_DX9_dll_DIRECT_INJECTION.def"
 obj_suff = DI.obj
 dll = uMod_d3d9_DI.dll
-
-else
-
-ifdef LOG_MESSAGE
-precompiler_flag = /D "LOG_MESSAGE" /D "HOOK_INJECTION"
-else
-precompiler_flag =  /D "HOOK_INJECTION"
-endif
-
-def_file = /DEF:"uMod_DX9_dll_HOOK_INJECTION.def"
-obj_suff = HI.obj
-dll = uMod_d3d9_HI.dll
-endif
-endif
 
 
 CXX = cl
@@ -73,7 +44,7 @@ headers = uMod_Main.h \
  uMod_TextureClient.h \
  uMod_TextureServer.h
 
-${bin}\d3d9.dll: ${objects}
+${bin}\${dll}: ${objects}
 	${CLINK} ${LFLAGS} ${objects} /OUT:${bin}\${dll}
 	copy ${bin}\${dll} ..\uMod_GUI\bin\${dll}
 
