--- a/uMod_GUI/makefile.gcc
+++ b/uMod_GUI/makefile.gcc
@@ -228,14 +228,14 @@ $(OBJS_exe):
 	
 ### Targets: ###
 
-all: $(OBJS_exe)\uMod.exe
+all: $(OBJS_exe)\uMod_Reforged.exe
 
 clean: 
 	-if exist $(OBJS)\*.o del $(OBJS)\*.o
 	-if exist $(OBJS)\*.d del $(OBJS)\*.d
-	-if exist $(OBJS_exe)\uMod.exe del $(OBJS_exe)\uMod.exe
+	-if exist $(OBJS_exe)\uMod_Reforged.exe del $(OBJS_exe)\uMod_Reforged.exe
 
-$(OBJS_exe)\uMod.exe: $(MINIMAL_OBJECTS) $(OBJS)\uMod_rc.o
+$(OBJS_exe)\uMod_Reforged.exe: $(MINIMAL_OBJECTS) $(OBJS)\uMod_rc.o
 	$(CXX) -o $@ $(MINIMAL_OBJECTS) $(LDFLAGS) $(__DEBUGINFO) $(__THREADSFLAG) -L$(LIBDIRNAME) -Wl,--subsystem,windows -mwindows  $(__WXLIB_CORE_p)  $(__WXLIB_BASE_p)  $(__WXLIB_MONO_p) $(__LIB_TIFF_p) $(__LIB_JPEG_p) $(__LIB_PNG_p)  -lwxzlib$(WXDEBUGFLAG)  -lwxregex$(WXUNICODEFLAG)$(WXDEBUGFLAG) -lwxexpat$(WXDEBUGFLAG) $(EXTRALIBS_FOR_BASE) $(__UNICOWS_LIB_p) $(__GDIPLUS_LIB_p) -lkernel32 -luser32 -lgdi32 -lcomdlg32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lole32 -loleaut32 -luuid -lrpcrt4 -ladvapi32 -lwsock32 -lodbc32
 
 $(OBJS)\uMod_rc.o: uMod.rc uMod.ico
